--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,7 +4,7 @@
   "name": "BnwUnshit",
   "version": "1.0",
 
-  "description": "Removes shit from bnw",
+  "description": "Removes shit from Bnw",
 
   "icons": {
     "48": "icons/unshit-48.png"
